# homeAgent

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml  start.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_cache_db_initial.py  0001_memory_db_initial.py  0001_users_db_initial.py  0002_cache_db_wine.py  0002_memory_db_lifecycle.py  0002_users_db_action_policy.py  0003_cache_db_flights.py  0003_memory_db_conversation_turns.py  0003_users_db_calendars.py  0004_cache_db_email_channel.py  0004_memory_db_member_id.py  0004_users_db_scheduled_prompts.py  0005_cache_db_flight_fetch_source.py  0005_users_db_run_at.py  0006_users_db_world_model.py  0007_users_db_world_model_proposals.py  0008_users_db_task_extensions.py  0009_users_db_task_links.py  0010_users_db_proactive_behaviour.py  0011_users_db_scheduled_prompt_links.py  0012_users_db_event_rules.py  0013_users_db_event_rule_control.py  0014_users_db_identity.py
app/: __main__.py  bot.py  config.py  db.py  logging_setup.py
app/agent/: agent.py  context.py  llm_router.py  prompts.py  runner.py  skills.py
app/api/: health.py  server.py  webhooks.py
docs/: agent-design.md  agent-flow.md  agent-skills-design.md  architecture-diagrams.md  architecture.md  autonomous-goal-reflection-design.md  autonomous-task-pursuit-design.md  autonomy-control-loop-design.md  ci.md  control-loop-admin-tab-design.md  development.md  email-channel-agentmail-design.md  flight-monitor-agent-design.md  frameworks-and-services.md  graceful-degradation.md  household-messaging-coordination-design.md  household-world-model-design.md  mac-mini-production.md  maintenance-plan.md  memory-design.md  multi-step-task-design.md  observability.md  ops-runbook.md  policy-gate.md  proactive-scheduled-behaviour-design.md  slash-commands-design.md  tech-stack.md  testing.md  user-identity-memory-link-design.md  wine-cellar-agent-design.md  world-model-usage-improvements.md
prompts/: home_context.md  instructions.md  persona.md
scripts/: agentmail_spike.py  backup.sh  prod.sh
tests/: conftest.py
(+145 files in other folders)
