[project]
name = "homeagent"
version = "0.10.3"
description = "Locally-orchestrated household AI agent"
requires-python = ">=3.12"

dependencies = [
    "pydantic-ai",
    "fastapi",
    "uvicorn[standard]",
    "slowapi",
    "python-telegram-bot",
    "sqlmodel",
    "alembic",
    # APScheduler 4.x is async-native; still pre-release — allow alpha/beta
    "apscheduler>=4.0.0a1,<5",
    "anthropic",
    "openai",
    "httpx",
    "structlog",
    "pydantic-settings",
    "python-dotenv",
    "sqlite-vec>=0.1.7a10",
    "numpy",
    "beautifulsoup4",
    "tavily-python",
    "psutil",
    "recurring-ical-events",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["sqlite_vec", "recurring_ical_events", "icalendar"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
